(fix) spacing and style for rooms and create room modal

--- a/client/assets/styles/style.css
+++ b/client/assets/styles/style.css
@@ -189,6 +189,8 @@ body {
 	display: inline-block;
 	margin: 5px;
 	padding: 5px;
+	width: 200px;
+	height: 200px;
 }
 
 .manage {
